2004-05-08  Albert Astals Cid  <tsdgeos@terra.es>
	* Add Capital -> Division asker
	* Privatize a method

2004-05-06  Albert Astals Cid  <tsdgeos@terra.es>
	* Fix gcc 3.4 compile error
	* Add capitals for africa map
	* Add capitals for spain autonomies map

2004-05-05  Albert Astals Cid  <tsdgeos@terra.es>

	* Add KGeography's webpage url to about box
	* Update TODO file
	* Increase version number to 0.2
	* Make parser give better errors with bad maps
	* Add capitals for europe map