@@ -14,7 +14,7 @@ kgeography_LDFLAGS = $(all_libraries) $(KDE_RPATH)
 kgeography_LDADD = -lkdeui
 
 # which sources should be compiled for kgeography
-kgeography_SOURCES = main.cpp mapwidget.cpp division.cpp map.cpp mapparser.cpp kgeography.cpp mapchooser.cpp mypopup.cpp popupmanager.cpp settings.kcfgc infowidget.cpp flagdivisionasker.cpp askwidget.cpp mapasker.cpp capitaldivisionasker.cpp divisioncapitalasker.cpp boxasker.cpp
+kgeography_SOURCES = main.cpp mapwidget.cpp division.cpp map.cpp mapparser.cpp kgeography.cpp mapchooser.cpp mypopup.cpp popupmanager.cpp settings.kcfgc infowidget.cpp flagdivisionasker.cpp askwidget.cpp mapasker.cpp capitaldivisionasker.cpp divisioncapitalasker.cpp boxasker.cpp divisionflagasker.cpp
 
 # let automoc handle all of the meta source files (moc)
 METASOURCES = AUTO
