@@ -10,8 +10,6 @@
 
 #include <klocale.h>
 
-#include <qlabel.h>
-#include <qlayout.h>
 #include <qradiobutton.h>
  
 #include "divisioncapitalasker.h"
@@ -19,13 +17,11 @@
 
 divisionCapitalAsker::divisionCapitalAsker(QWidget *parent, map *m, uint count) : boxAsker(parent, m, count)
 {
-	p_label = new QLabel(this);
-	p_lay -> insertWidget(0, p_label);
 	init();
 }
 
 void divisionCapitalAsker::nextQuestionHook(QString division, int i, bool isAnswer)
 {
 	p_rb[i] -> setText(p_map -> getDivisionCapital(division));
-	if (isAnswer) p_label -> setText(i18n("The capital of %1 is...").arg(division));
+	if (isAnswer) setQuestion(i18n("The capital of %1 is...").arg(division));
 }
