@@ -1,3 +1,12 @@
+2004-05-09  Albert Astals Cid  <tsdgeos@terra.es>
+	* Add Division -> flag asker
+
+2004-05-08  Albert Astals Cid  <tsdgeos@terra.es>
+	* Add Division -> Capital asker
+	* Create boxasker abstactc base class that has most of the code that
+previously was repeated at capitaldivisionasker.cpp divisioncapitalasker.cpp
+and flagdivisionasker.cpp
+
 2004-05-08  Albert Astals Cid  <tsdgeos@terra.es>
 	* Add Capital -> Division asker
 	* Privatize a method
